--- a/adevinta-technical-test/Presentation/RandomUserDetail/RandomUserDetailView.xib
+++ b/adevinta-technical-test/Presentation/RandomUserDetail/RandomUserDetailView.xib
@@ -1,20 +1,95 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="RandomUserDetailView" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="RandomUserDetailView" customModule="adevinta_technical_test" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FPB-gK-5ci">
+                    <rect key="frame" x="0.0" y="44" width="414" height="808"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="A2R-ds-fpo">
+                            <rect key="frame" x="20" y="20" width="374" height="359.5"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" image="person.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Gdx-WC-HlM">
+                                    <rect key="frame" x="0.0" y="0.5" width="374" height="199"/>
+                                    <color key="tintColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="200" id="qvB-3A-zsR"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gender" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ea3-Vh-0wX" userLabel="Gender">
+                                    <rect key="frame" x="0.0" y="210" width="374" height="16"/>
+                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name &amp; Surname" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ky7-kj-L3u" userLabel="Name">
+                                    <rect key="frame" x="0.0" y="236" width="374" height="31.5"/>
+                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="26"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Qe-0D-MKC" userLabel="Location">
+                                    <rect key="frame" x="0.0" y="277.5" width="374" height="23"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Registered date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uZ4-Ud-CZb" userLabel="Registered date">
+                                    <rect key="frame" x="0.0" y="310.5" width="374" height="19.5"/>
+                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U3M-Gg-5z3" userLabel="Email">
+                                    <rect key="frame" x="0.0" y="340" width="374" height="19.5"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="A2R-ds-fpo" firstAttribute="leading" secondItem="FPB-gK-5ci" secondAttribute="leading" constant="20" symbolic="YES" id="4wi-7V-wea"/>
+                        <constraint firstAttribute="trailing" secondItem="A2R-ds-fpo" secondAttribute="trailing" constant="20" symbolic="YES" id="Cq3-H9-l1E"/>
+                        <constraint firstItem="A2R-ds-fpo" firstAttribute="centerX" secondItem="FPB-gK-5ci" secondAttribute="centerX" id="fvX-jr-cOg"/>
+                        <constraint firstAttribute="bottom" secondItem="A2R-ds-fpo" secondAttribute="bottom" constant="20" symbolic="YES" id="tgD-u8-m43"/>
+                        <constraint firstItem="A2R-ds-fpo" firstAttribute="top" secondItem="FPB-gK-5ci" secondAttribute="top" constant="20" symbolic="YES" id="tkP-W1-cyb"/>
+                    </constraints>
+                    <viewLayoutGuide key="contentLayoutGuide" id="eEk-Ig-LmP"/>
+                    <viewLayoutGuide key="frameLayoutGuide" id="0Un-p4-Ejl"/>
+                </scrollView>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="136" y="127"/>
+            <constraints>
+                <constraint firstItem="FPB-gK-5ci" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="3hy-aJ-BB4"/>
+                <constraint firstItem="FPB-gK-5ci" firstAttribute="top" secondItem="RGC-Vr-hga" secondAttribute="top" id="9jz-hk-gym"/>
+                <constraint firstItem="FPB-gK-5ci" firstAttribute="leading" secondItem="RGC-Vr-hga" secondAttribute="leading" id="JOg-pW-Vpm"/>
+                <constraint firstItem="FPB-gK-5ci" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="xZA-qv-W4a"/>
+            </constraints>
+            <viewLayoutGuide key="safeArea" id="RGC-Vr-hga"/>
+            <connections>
+                <outlet property="emailLabel" destination="U3M-Gg-5z3" id="hrS-qc-g0d"/>
+                <outlet property="genderLabel" destination="Ea3-Vh-0wX" id="o0V-tb-pMF"/>
+                <outlet property="locationLabel" destination="8Qe-0D-MKC" id="coo-Hb-Ubv"/>
+                <outlet property="nameLabel" destination="Ky7-kj-L3u" id="Ylw-5g-tPS"/>
+                <outlet property="pictureImage" destination="Gdx-WC-HlM" id="usC-O9-MBG"/>
+                <outlet property="regitrationDateLabel" destination="uZ4-Ud-CZb" id="kNX-PN-9i6"/>
+            </connections>
+            <point key="canvasLocation" x="134.78260869565219" y="126.5625"/>
         </view>
     </objects>
+    <resources>
+        <image name="person.circle" catalog="system" width="64" height="60"/>
+    </resources>
 </document>
