--- a/adevinta-technical-test/Presentation/RandomUserDetail/RandomUserDetailView.xib
+++ b/adevinta-technical-test/Presentation/RandomUserDetail/RandomUserDetailView.xib
@@ -17,41 +17,46 @@
                     <rect key="frame" x="0.0" y="44" width="414" height="808"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="A2R-ds-fpo">
-                            <rect key="frame" x="20" y="20" width="374" height="359.5"/>
+                            <rect key="frame" x="20" y="20" width="374" height="459.5"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" image="person.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Gdx-WC-HlM">
-                                    <rect key="frame" x="0.0" y="0.5" width="374" height="199"/>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" image="person.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Gdx-WC-HlM">
+                                    <rect key="frame" x="0.0" y="0.5" width="374" height="299"/>
                                     <color key="tintColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="200" id="qvB-3A-zsR"/>
+                                        <constraint firstAttribute="height" constant="300" id="qvB-3A-zsR"/>
                                     </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="10"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gender" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ea3-Vh-0wX" userLabel="Gender">
-                                    <rect key="frame" x="0.0" y="210" width="374" height="16"/>
+                                    <rect key="frame" x="0.0" y="310" width="374" height="16"/>
                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name &amp; Surname" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ky7-kj-L3u" userLabel="Name">
-                                    <rect key="frame" x="0.0" y="236" width="374" height="31.5"/>
+                                    <rect key="frame" x="0.0" y="336" width="374" height="31.5"/>
                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="26"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Qe-0D-MKC" userLabel="Location">
-                                    <rect key="frame" x="0.0" y="277.5" width="374" height="23"/>
+                                    <rect key="frame" x="0.0" y="377.5" width="374" height="23"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Registered date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uZ4-Ud-CZb" userLabel="Registered date">
-                                    <rect key="frame" x="0.0" y="310.5" width="374" height="19.5"/>
+                                    <rect key="frame" x="0.0" y="410.5" width="374" height="19.5"/>
                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U3M-Gg-5z3" userLabel="Email">
-                                    <rect key="frame" x="0.0" y="340" width="374" height="19.5"/>
+                                    <rect key="frame" x="0.0" y="440" width="374" height="19.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
