--- a/adevinta-technical-test/Presentation/RandomUsersList/View/ItemCellView.xib
+++ b/adevinta-technical-test/Presentation/RandomUsersList/View/ItemCellView.xib
@@ -15,64 +15,45 @@
                 <rect key="frame" x="0.0" y="0.0" width="414" height="112"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qeF-sg-3Os">
-                        <rect key="frame" x="10" y="5" width="81.5" height="102"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qeF-sg-3Os">
+                        <rect key="frame" x="10" y="5" width="92" height="102"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="qeF-sg-3Os" secondAttribute="height" multiplier="4:5" id="bcV-jC-R4M"/>
+                            <constraint firstAttribute="width" secondItem="qeF-sg-3Os" secondAttribute="height" multiplier="9:10" id="bcV-jC-R4M"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="10"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q5F-2r-gXN">
-                        <rect key="frame" x="101.5" y="10" width="232.5" height="21.5"/>
+                        <rect key="frame" x="112" y="10" width="292" height="21.5"/>
                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jF3-ly-tk9">
-                        <rect key="frame" x="101.5" y="39.5" width="232.5" height="18"/>
+                        <rect key="frame" x="112" y="39.5" width="292" height="18"/>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Juv-QW-i6M">
-                        <rect key="frame" x="344" y="10" width="60" height="38"/>
-                        <color key="backgroundColor" red="0.58072251080000004" green="0.066734083" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="60" id="2i2-wG-tBz"/>
-                        </constraints>
-                        <state key="normal" title="Remove">
-                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </state>
-                    </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E0i-45-Nmu">
-                        <rect key="frame" x="344" y="53" width="60" height="38"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <state key="normal" title="Open"/>
-                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottomMargin" secondItem="E0i-45-Nmu" secondAttribute="bottom" constant="10" id="1IE-LD-P5G"/>
                     <constraint firstItem="q5F-2r-gXN" firstAttribute="leading" secondItem="qeF-sg-3Os" secondAttribute="trailing" constant="10" id="4lI-F7-CrN"/>
-                    <constraint firstItem="E0i-45-Nmu" firstAttribute="height" secondItem="Juv-QW-i6M" secondAttribute="height" id="G06-fI-4WZ"/>
+                    <constraint firstAttribute="trailing" secondItem="jF3-ly-tk9" secondAttribute="trailing" constant="10" id="Cig-vX-e34"/>
                     <constraint firstItem="qeF-sg-3Os" firstAttribute="leading" secondItem="JwH-WG-8IN" secondAttribute="leading" constant="10" id="JnQ-Gc-U9f"/>
-                    <constraint firstItem="Juv-QW-i6M" firstAttribute="top" secondItem="JwH-WG-8IN" secondAttribute="top" constant="10" id="MbJ-97-fGH"/>
+                    <constraint firstAttribute="trailing" secondItem="q5F-2r-gXN" secondAttribute="trailing" constant="10" id="PG6-66-H31"/>
                     <constraint firstItem="q5F-2r-gXN" firstAttribute="top" secondItem="JwH-WG-8IN" secondAttribute="top" constant="10" id="Qjp-Vx-Bup"/>
-                    <constraint firstItem="E0i-45-Nmu" firstAttribute="width" secondItem="Juv-QW-i6M" secondAttribute="width" id="RvM-ih-fmk"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="jF3-ly-tk9" secondAttribute="bottom" constant="10" id="S5I-eM-2ek"/>
-                    <constraint firstItem="E0i-45-Nmu" firstAttribute="top" secondItem="Juv-QW-i6M" secondAttribute="bottom" constant="5" id="Sev-aO-uCy"/>
-                    <constraint firstAttribute="trailing" secondItem="Juv-QW-i6M" secondAttribute="trailing" constant="10" id="SfM-P3-GAf"/>
-                    <constraint firstAttribute="trailing" secondItem="E0i-45-Nmu" secondAttribute="trailing" constant="10" id="cpf-JE-Ji2"/>
-                    <constraint firstItem="Juv-QW-i6M" firstAttribute="leading" secondItem="jF3-ly-tk9" secondAttribute="trailing" constant="10" id="gyS-1z-5rN"/>
                     <constraint firstItem="jF3-ly-tk9" firstAttribute="leading" secondItem="qeF-sg-3Os" secondAttribute="trailing" constant="10" id="iSc-SA-W9g"/>
                     <constraint firstItem="qeF-sg-3Os" firstAttribute="top" secondItem="JwH-WG-8IN" secondAttribute="top" constant="5" id="jzy-xV-fPw"/>
                     <constraint firstItem="jF3-ly-tk9" firstAttribute="top" secondItem="q5F-2r-gXN" secondAttribute="bottom" constant="8" id="kQt-0z-ZXY"/>
                     <constraint firstAttribute="bottom" secondItem="qeF-sg-3Os" secondAttribute="bottom" constant="5" id="rXd-6n-drY"/>
-                    <constraint firstItem="Juv-QW-i6M" firstAttribute="leading" secondItem="q5F-2r-gXN" secondAttribute="trailing" constant="10" id="vzD-P3-EZ8"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="itemImage" destination="qeF-sg-3Os" id="lce-M4-pbZ"/>
-                <outlet property="openButton" destination="E0i-45-Nmu" id="tfT-VS-1fQ"/>
-                <outlet property="removeButton" destination="Juv-QW-i6M" id="fEO-UH-cNS"/>
                 <outlet property="subtitleLabel" destination="jF3-ly-tk9" id="IOV-Ry-Suz"/>
                 <outlet property="titleLabel" destination="q5F-2r-gXN" id="gWM-pY-ahE"/>
             </connections>
